Folding menu bar now covers content, fixed update bug

--- a/styles/index.css
+++ b/styles/index.css
@@ -10,12 +10,17 @@ body {
   font-family: sans-serif;
 }
 
+#main-container {
+
+}
+
 #header {
   border: 1px solid black;
   float: left;
   width: 100%;
   background-color: #4d4d4d;
   color: #d9d9d9;
+  position: relative;
 }
 
 #header a {
