--- a/styles/notebook.css
+++ b/styles/notebook.css
@@ -21,6 +21,9 @@
   border: 1px solid black;
   margin-right: 0.5%;
   background-color: #4d4d4d;
+  position: absolute;
+  top: 80px;
+  left: 0;
 }
 
 .toolbar-button {
